update-manager (1:0.97.1) jaunty; urgency=low

  * UpdateManager/UpdateManager.py:
    - make the gconf handling more robust (LP: #320586)

 --

update-manager (1:0.97) jaunty; urgency=low

  * UpdateManager/Core/MetaRelease.py:
    - remove debug message (LP: #310046)
  * UpdateManager/Common/utils.py:
    - when  initializing the proxy configuration, do in this
      order:
      * check apt setting
      * check synaptic setting
      * check users gconf
      * check http_proxy environment 
    (LP: #24250)
  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - ensure correct error message if downloading failed
      (LP: #113658)
    - when fetching from mirrors, add fallback if the mirror
      is too loaded to cope
    - improve logic that detects what mirror is in use by
      sources.list inspection (LP: #107983)
  * DistUpgrade/DistUpgradeMain.py, dist-upgrade.py:
    - re-factor and make code more modular
    - do not overwrite existing log files on upgrade
      (LP: #111819)
  * reorganize the imports and get rid of "Common" submodule 
    and merge that all into "Core"
  * improve the debug output via the "DEBUG_UPDATE_MANAGER"
    environment
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Jan 2009 17:26:40 +0100

update-manager (1:0.96.4) jaunty; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - do not generate apport report against update-manager if 
      cache.commit() failed. the report is generated against
      the failing package instead (LP: #311220)
    - honor RELEASE_UPRADER_ALLOW_THIRD_PARTY environment and do   
      not  comment out third party repositories in this case 
      (useful internal repositories, make sure that sudo does 
       not clean this env when you make use of it)
  * DistUpgrade/DistUpgrade.cfg:
    - remove powermanagement-interface on upgrades for ubuntu 
      and kubuntu (no longer needed by them)
  * DistUpgrade/DevelReleaseAnnouncement: